--- a/FoodList/FoodList.csproj
+++ b/FoodList/FoodList.csproj
@@ -18,12 +18,15 @@
     <IISExpressUseClassicPipelineMode />
   </PropertyGroup>
   <ItemGroup>
-    <Content Include="app.css" />
+    <Content Include="Common\Angular\1.4.8\angular.min.js" />
+    <Content Include="Common\Azure\angular-azure-mobile-service.js" />
+    <Content Include="Common\Material\1.0.2\angular-material.css" />
+    <Content Include="Common\Material\1.0.2\angular-material.layouts.css" />
+    <Content Include="Common\Material\1.0.2\angular-material.min.js" />
+    <Content Include="Common\Services\CommonFunctionsService.js" />
+    <Content Include="Common\Underscore\1.8.3\underscore-min.js" />
     <Content Include="index.html" />
     <Content Include="web.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <TypeScriptCompile Include="app.ts" />
   </ItemGroup>
   <ItemGroup>
     <None Include="web.Debug.config">
@@ -32,6 +35,13 @@
     <None Include="web.Release.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Components\" />
+    <Folder Include="Style\" />
+  </ItemGroup>
+  <ItemGroup>
+    <TypeScriptCompile Include="Common\Model\Model.ts" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
