--- a/FoodList/FoodList.csproj
+++ b/FoodList/FoodList.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Common\Model\Model.js.map" />
+    <None Include="FoodList.pubxml" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
