--- a/FoodList/FoodList.csproj
+++ b/FoodList/FoodList.csproj
@@ -23,8 +23,12 @@
     <Content Include="Common\Material\1.0.2\angular-material.css" />
     <Content Include="Common\Material\1.0.2\angular-material.layouts.css" />
     <Content Include="Common\Material\1.0.2\angular-material.min.js" />
+    <Content Include="Common\Material\1.0.6\angular-material.css" />
+    <Content Include="Common\Material\1.0.6\angular-material.layouts.css" />
+    <Content Include="Common\Material\1.0.6\angular-material.min.js" />
     <Content Include="Common\Model\Model.js" />
     <Content Include="Common\Services\CommonFunctionsService.js" />
+    <Content Include="Common\UIRouter\0.2.18\angular-ui-router.min.js" />
     <Content Include="Common\Underscore\1.8.3\underscore-min.js" />
     <Content Include="Components\FoodList\FoodList.html" />
     <Content Include="Components\FoodList\FoodListController.js" />
