--- a/FoodList/FoodList.csproj
+++ b/FoodList/FoodList.csproj
@@ -19,6 +19,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Content Include="Common\Angular\1.4.8\angular.min.js" />
+    <Content Include="Common\Angular\1.5.5\angular.min.js" />
     <Content Include="Common\Azure\angular-azure-mobile-service.js" />
     <Content Include="Common\Material\1.0.2\angular-material.css" />
     <Content Include="Common\Material\1.0.2\angular-material.layouts.css" />
@@ -26,7 +27,10 @@
     <Content Include="Common\Material\1.0.6\angular-material.css" />
     <Content Include="Common\Material\1.0.6\angular-material.layouts.css" />
     <Content Include="Common\Material\1.0.6\angular-material.min.js" />
+    <Content Include="Common\Material\1.0.8\angular-material.css" />
+    <Content Include="Common\Material\1.0.8\angular-material.min.js" />
     <Content Include="Common\Model\Model.js" />
+    <Content Include="Common\Satellizer\0.14.0\satellizer.min.js" />
     <Content Include="Common\Services\CommonFunctionsService.js" />
     <Content Include="Common\Services\WebApiService.js" />
     <Content Include="Common\UIRouter\0.2.18\angular-ui-router.min.js" />
