--- a/WebApi/Web.config
+++ b/WebApi/Web.config
@@ -5,12 +5,13 @@
   -->
 <configuration>
   <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebApi-20160405210222;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebApi-20160405210222.mdf" />-->
-    <add name="DBConnection" connectionString="Server=tcp:cvkydplre2.database.windows.net,1433;Database=bvcMobSvc_db;User ID=BernardVC@cvkydplre2;Password=Miesje1Guppy;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"/>
+    <add name="DBConnection" connectionString="Server=tcp:cvkydplre2.database.windows.net,1433;Database=bvcMobSvc_db;User ID=BernardVC@cvkydplre2;Password=Miesje1Guppy;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" />
+    <add name="bvcMobSvc_dbEntities" connectionString="metadata=res://*/Models.FoodListModel.csdl|res://*/Models.FoodListModel.ssdl|res://*/Models.FoodListModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=cvkydplre2.database.windows.net,1433;initial catalog=bvcMobSvc_db;persist security info=True;user id=BernardVC;password=Miesje1Guppy;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
@@ -93,15 +94,18 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" />
-        <bindingRedirect oldVersion="1.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
   </entityFramework>
 </configuration>
