--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\FoodStorageController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TestController.cs" />
@@ -200,6 +201,7 @@
       <DependentUpon>FoodListModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\AccountSvc.cs" />
     <Compile Include="Service\FoodStorageSvc.cs" />
   </ItemGroup>
   <ItemGroup>
