--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\account-part.cs" />
     <Compile Include="Models\account.cs">
       <DependentUpon>FoodListModel.tt</DependentUpon>
     </Compile>
